# copc-rs

./: Cargo.toml  LICENSE-MIT  README.md
examples/: copc_http.rs  copc_to_xyz.rs  print_points.rs
src/: bounds.rs  compressor.rs  copc.rs  decompressor.rs  error.rs  file.rs  header.rs  lib.rs  main.rs  reader.rs  vlr.rs  writer.rs
tests/: drop_does_not_panic.rs  evlr_roundtrip.rs  roundtrip.rs
viewer/: Cargo.toml  README.md
viewer/src/: main.rs
