[package]
name = "copc-rs"
version = "0.5.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>", "Øyvind Hjermstad <@yvind>"]
edition = "2021"

description = "Cloud Optimized Point Cloud (COPC) reader and writer."
homepage = "https://github.com/pka/copc-rs"
repository = "https://github.com/pka/copc-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["lidar", "pointcloud", "copc", "las", "geo"]
categories = ["science::geo", "rendering::data-formats"]

[dependencies]
byteorder = "1.4.3"
fastrand = "2.3.0"
las-crs = "0.1.1"
las = { version = "0.9.2", features = ["laz"] }
laz = "0.9.2"
log = "0.4.25"
thiserror = "2.0.6"
crs-definitions = "0.3.0"

[dev-dependencies]
env_logger = "0.11.8"
http-range-client = { version = "0.9.0", default-features = false, features = [
    "ureq-sync",
] }
