[package]
name = "copc-rs"
version = "0.6.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>", "Øyvind Hjermstad <@yvind>"]
edition = "2021"

description = "Cloud Optimized Point Cloud (COPC) reader and writer."
homepage = "https://github.com/pka/copc-rs"
repository = "https://github.com/pka/copc-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["lidar", "pointcloud", "copc", "las", "geo"]
categories = ["science::geo", "rendering::data-formats"]

[dependencies]
byteorder = "1.5"
fastrand = { version = "2.4", optional = true }
las = { version = "0.9", features = ["laz"] }
laz = "0.12"
log = "0.4"
thiserror = "2"
crs-definitions = { version = "0.5.0", optional = true }

[features]
laz-parallel = ["las/laz-parallel"]
writer = ["dep:crs-definitions", "dep:fastrand"]

[dev-dependencies]
env_logger = "0.11.8"
http-range-client = { version = "0.9.0", default-features = false, features = [
    "ureq-sync",
] }
